altera colunas de previsao de indicadores para tipo numerico

--- a/schemas/indicadores_planejamento.yaml
+++ b/schemas/indicadores_planejamento.yaml
@@ -19,7 +19,8 @@ fields:
     type: string
   - name: Índice de Referência
     target: indice_de_referencia
-    type: string
+    type: number
+    decimalChar: '.'
   - name: Em apuração? (Índice de Referência)
     target: em_apuracao_indice_de_referencia
     type: string
@@ -29,25 +30,29 @@ fields:
     format: '%d/%m/%Y'
   - name: Previsão para 2024
     target: previsao_para_ano0
-    type: string
+    type: number
+    decimalChar: '.'
   - name: Em apuração? (2024)
     target: em_apuracao_ano0
     type: string
   - name: Previsão para 2025
     target: previsao_para_ano1
-    type: string
+    type: number
+    decimalChar: '.'
   - name: Em apuração? (2025)
     target: em_apuracao_ano1
     type: string
   - name: Previsão para 2026
     target: previsao_para_ano2
-    type: string
+    type: number
+    decimalChar: '.'
   - name: Em apuração? (2026)
     target: em_apuracao_ano2
     type: string
   - name: Previsão para 2027
     target: previsao_para_ano3
-    type: string
+    type: number
+    decimalChar: '.'
   - name: Em apuração? (2027)
     target: em_apuracao_ano3
     type: string
